# NekoEngine

./: .gitignore  .gitmodules  .travis.yml  3rdparty.txt  CMakeLists.txt  Editor.pro  LICENSE  Neko Engine.kdev4  Neko Engine.sln  NekoEngine.kdev4  NekoEngine.props  NekoEngine.sln  README.md  Setup.cmd  Setup.sh  assets.txt  build.rb
Config/: Engine.ini
Docs/: scripting.ndoc
Editor/: Editor.pro  Editor.rc  EditorWindow.cpp  EditorWindow.h  EditorWindow.ui  EngineWidget.cpp  EngineWidget.h  Version.h  editor.qrc  editorglwidget.cpp  editorglwidget.h  editorwindow.cpp  editorwindow.h  editorwindow.ui  main.cpp
Engine/: Camera.cpp  Engine.pro  Engine.rc  Engine.vcxproj  Engine.vcxproj.filters
Engine/Audio/: AudioClip.cpp  AudioSource.cpp
Engine/Core/: AnimationClip.cpp  Camera.cpp  CameraManager.cpp  Console.cpp  DeferredBuffer.cpp  Engine.cpp  HBAO.cpp  Input.cpp  LoadingScreen.cpp  Material.cpp  NFont.cpp  PostProcessor.cpp  ResourceDatabase.cpp  ResourceManager.cpp  SSAO.cpp  SceneManager.cpp  Shader.cpp  ShadowMap.cpp  SkeletalMesh.cpp  Skeleton.cpp  SoundManager.cpp  StaticMesh.cpp  Texture.cpp  TextureFont.cpp
Engine/Engine/: AnimationClip.cpp  Animator.cpp  DeferredBuffer.cpp  Engine.cpp  LoadingScreen.cpp  Material.cpp  Mesh.cpp  PostProcessor.cpp  ResourceDatabase.cpp  ResourceManager.cpp  SSAO.cpp  SceneManager.cpp  Shader.cpp  ShadowMap.cpp  SkeletalMesh.cpp  Skeleton.cpp  SoundManager.cpp  StaticMesh.cpp  Texture.cpp  TextureFont.cpp
Engine/Engine.xcodeproj/: project.pbxproj
Engine/Engine_iOS/: Engine_iOS.h
Engine/Platform/: shared.cpp
Engine/PostEffects/: Effect.cpp  SMAA.cpp
Engine/Scene/: Camera.cpp  Light.cpp  Object.cpp  ObjectComponent.cpp  Scene.cpp  Skybox.cpp  Terrain.cpp
Engine/System/: Logger.cpp  Memory.cpp
GL4Renderer/: GL4Renderer.vcxproj  GL4Renderer.vcxproj.filters  GLArrayBuffer.h  GLBuffer.cpp  GLBuffer.h  GLFramebuffer.cpp  GLFramebuffer.h  GLRenderer.cpp  GLRenderer.h  GLShader.cpp  GLTexture.cpp  GLTexture.h  glad.cpp  resource.h
GL4Renderer/Loaders/: nv_dds.cpp  nv_dds.h  tga.cpp
GLESRenderer/: GLESArrayBuffer.cpp  GLESArrayBuffer.h  GLESBuffer.cpp  GLESBuffer.h  GLESFramebuffer.cpp  GLESFramebuffer.h  GLESRenderer.cpp  GLESRenderer.h  GLESRenderer.rc  GLESRenderer.vcxproj  GLESShader.cpp  GLESShader.h  GLESTexture.cpp  GLESTexture.h  glad.cpp  glad.h  renderer.cpp
GLESRenderer/GLESRenderer.xcodeproj/: project.pbxproj
GLRenderer/: GLArrayBuffer.cpp  GLArrayBuffer.h  GLBuffer.cpp  GLBuffer.h  GLFence.cpp  GLFramebuffer.cpp  GLFramebuffer.h  GLHBAO.cpp  GLRenderer.cpp  GLRenderer.h  GLRenderer.rc  GLRenderer.vcxproj  GLRenderer.vcxproj.filters  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h  config.h  debug.cpp  renderer.cpp
GLRenderer/GLRenderer.xcodeproj/: project.pbxproj
GLRenderer/Loaders/: nv_dds.cpp  nv_dds.h  tga.cpp  tga.h
Include/: btBulletCollisionCommon.h
Include/Animation/: AnimationClip.h  AnimationNode.h  Bone.h  Skeleton.h  TransformNode.h
Include/Audio/: AudioBuffer.h  AudioClip.h  AudioSource.h  AudioSystem.h
Include/Engine/: AnimationClip.h  AnimationNode.h  Animator.h  Bone.h  Camera.h  CameraManager.h  Console.h  Debug.h  DeferredBuffer.h  Defs.h  Engine.h  EngineClassFactory.h  EngineUtils.h  EventManager.h  Events.h  GameModule.h  HBAO.h  Input.h  Keycodes.h  LoadingScreen.h  Material.h  Mesh.h  NFont.h  PostProcessor.h  ResourceDatabase.h  ResourceManager.h  SSAO.h  SceneManager.h  Shader.h  ShadowMap.h  SkeletalMesh.h  Skeleton.h  SoundManager.h  StaticMesh.h  TaskManager.h  Texture.h  TextureFont.h  TransformNode.h  Version.h  Vertex.h
Include/GUI/: Box.h  Button.h  Control.h  GUI.h  GUIDefs.h  GUIManager.h  Label.h  Slider.h  TextBox.h
Include/Input/: Input.h
Include/ParticleSystem/: Emitter.h  Particle.h
Include/Physics/: Collider.h  Physics.h  Ray.h  RigidBody.h
Include/Platform/: Compat.h  CrashHandler.h  Platform.h  PlatformDetect.h
Include/PostEffects/: Bloom.h  Effect.h  FXAA.h  SMAA.h
Include/Profiler/: Profiler.h
Include/Renderer/: Buffer.h  Drawable.h  Effect.h  GUI.h  Material.h  NFont.h  PipelineManager.h  PostProcessor.h  Primitives.h  RArrayBuffer.h  RBuffer.h  RFence.h  RFramebuffer.h  RShader.h  RTexture.h  RenderPassManager.h  Renderer.h  ShaderModule.h  ShadowRenderer.h  SkeletalMesh.h  StaticMesh.h  Swapchain.h  Texture.h
Include/Resource/: AnimationClipResource.h  AudioClipResource.h  FontResource.h  MaterialResource.h  MeshResource.h  Resource.h  ResourceInfo.h  ShaderModuleResource.h  ShaderResource.h  TextureFontResource.h  TextureResource.h
Include/Runtime/: NArray.h  NArrayTS.h  NBounds.h  NFrustum.h  NOcTree.h  NString.h  NThreadPool.h  Runtime.h
Include/Scene/: Camera.h  CameraManager.h  Light.h  LoadingScreen.h  Object.h  ObjectComponent.h  OcTree.h  Scene.h  ScriptHost.h  Skybox.h  Skysphere.h  Terrain.h
Include/System/: Logger.h  Memory.h
Launcher/: Launcher.rc  Launcher.vcxproj
Launcher/BB10/: launcher.cpp
Launcher/Launcher-iOS/: Info.plist  (+4 more)
Neko Engine.xcworkspace/: contents.xcworkspacedata
NekoEngine.xcworkspace/: contents.xcworkspacedata
NullRenderer/: NullArrayBuffer.h  NullFence.h  NullFramebuffer.h  NullRenderer.h  NullRenderer.vcxproj  NullRenderer.vcxproj.filters  NullShader.h  NullTexture.h
Projects/Android/NekoEngine/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
Projects/Android/NekoEngine/app/src/main/: AndroidManifest.xml
Projects/Android/NekoEngine/app/src/main/assets/: Engine.ini
Projects/Android/NekoEngine/app/src/main/cpp/: launcher.cpp
Projects/Android/NekoEngine/app/src/main/res/values/: strings.xml
Resources/: Engine.ini  Engine_Low.ini  assets.txt
Source/: NekoEngine.props
TestGame/: DemoAnimatorComponent.cpp  DemoAnimatorComponent.h  GameController.cpp  GameController.h  MovingObject.cpp  MovingObject.h  TestGame.cpp  TestGame.h  TestGame.pro  TestGame.rc  TestGame.vcxproj  TestGame.vcxproj.filters
Tools/: NekoEngine.ruleset  nar.cpp  obj2zfg.cpp  png2argb.c
iOSGLESRenderer/: GLESBuffer.cpp  GLESBuffer.h  GLESRenderer.cpp  GLESRenderer.h  GLESShader.h  GLESTexture.h
(+893 files in other folders)
